[package]
name = "firebase-scrypt"
description = "Pure Rust implementation of Firebase's script password hashing algorithm"
repository = "https://github.com/Techie-Pi/firebase-scrypt-rust"
homepage = "https://github.com/Techie-Pi/firebase-scrypt-rust"
documentation = "https://github.com/Techie-Pi/firebase-scrypt-rust"
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.13"
scrypt = { version = "0.10", default-features = false }
aes = "0.8"
ctr = "0.9"
constant_time_eq = "0.2"

[dev-dependencies]
hex = "0.4"

[features]
default = ["simple"]
simple = []
